# LENIA

./: README.md  main.py  pillow_example.apng  pyproject.toml
application/: Channel.py  LENIA.py  app.py  lenia_client.py  lenia_server.py  main.py  world.py
