[tool.poetry]
name = "LENIA"
version = "0.1.0"
description = "LENIA continous cellular automaton"
authors = ["CIA"]
readme = "README.md"
packages = [{include = "application"}]

[tool.poetry.scripts]
play = "main:cli"

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
poethepoet = "^0.24.0"
ipykernel = "^6.25.2"
numpy = "^1.26.1"
pytest = "^7.4.2"
scikit-learn = "^1.3.2"
imutils = "^0.5.4"
opencv-python = "^4.8.1.78"
matplotlib = "^3.8.3"

[tool.poe.tasks]
torch-cuda = "pip install torch torchvision torchaudio --index-url https://download.pytorch.org/whl/cu118"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"